clusters/danto/apps/hypersnap/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hypersnap-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hypersnap-grafana
  template:
    metadata:
      labels:
        app: hypersnap-grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.0.3
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
            - name: grafana-config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
              readOnly: true
            - name: grafana-datasource
              mountPath: /etc/grafana/provisioning/datasources/datasource.yaml
              subPath: datasource.yaml
              readOnly: true
            - name: grafana-dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml
              subPath: dashboards.yaml
              readOnly: true
            - name: grafana-dashboard
              mountPath: /etc/grafana/dashboards
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hypersnap-grafana-data
        - name: grafana-config
          configMap:
            name: hypersnap-grafana-config
        - name: grafana-datasource
          configMap:
            name: hypersnap-grafana-datasource
        - name: grafana-dashboard-provider
          configMap:
            name: hypersnap-grafana-dashboard-provider
        - name: grafana-dashboard
          configMap:
            name: hypersnap-grafana-dashboard
