clusters/danto/apps/hypersnap/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hypersnap-grafana
spec:
  selector:
    app: hypersnap-grafana
  ports:
    - name: http
      port: 3000
      targetPort: http
