clusters/danto/apps/hypersnap/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: hypersnap-grpc
spec:
  entryPoints:
    - hypersnap-grpc
  routes:
    - match: HostSNI(`*`)
      services:
        - name: hypersnap
          port: grpc
